cmake_minimum_required(VERSION 3.20)
project(advent_of_code)

set(CMAKE_CXX_STANDARD 20)

add_executable(advent_of_code1 1.cpp)
add_executable(advent_of_code1_1 1_1.cpp)
add_executable(advent_of_code2_1 2_1.cpp)
add_executable(advent_of_code2_2 2_2.cpp)
add_executable(advent_of_code3_1 3_1.cpp)
add_executable(advent_of_code3_2 3_2.cpp)
add_executable(advent_of_code4_1 4_1.cpp)
